New fully functioning architecture with STT and TTS

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,11 @@ flask-cors>=3.0.10
 python-dotenv>=0.19.0
 numpy>=1.21.2
 sounddevice>=0.4.3
-gtts>=2.3.1
-SpeechRecognition>=3.8.1
+soundfile>=0.12.1
+librosa>=0.10.0
+scipy>=1.10.0
 python-jose[cryptography]>=3.3.0
 pyasn1>=0.6.1,<0.7.0
 pyasn1-modules>=0.4.2
+aiohttp>=3.8.0
+typing-extensions>=4.0.0
